[tool.poetry]
name = "llm-sampling"
version = "0.1.0"
description = ""
authors = ["Sagar Patil <sagarreddypatil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
numpy = "^1.25.2"
transformers = "^4.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
