[tool.poetry]
name = "sampling"
version = "0.1.0"
description = ""
authors = ["Sagar Patil <sagarreddypatil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
numpy = "^1.25.2"
transformers = "^4.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
